--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ System.out.println(a = b);
 </div>
 
 <footer>
-    Code Escape Room | HTML & CSS Prototype | Review-1
+    Code Escape Room 
 </footer>
 
 </body>
